ajouter tout les fichiers

--- a/FirstProject.html
+++ b/FirstProject.html
@@ -15,8 +15,9 @@
         <h1><u>Alyee</u></h1>
                 <br>
         <h2>Mes projets</h2>
+        <br>
     </section>
-
+<p></p>
     <section>
         <ol> <!-- target="_blank" permet d'ouvrir le lien dans un nouvel onglet-->
             <li><a href="http://www.laguilde2bessan.com" target="_blank">Site association</a></li>
@@ -26,6 +27,9 @@
         </ol>
     </section>
 
+    <section>
+        <img src="Images/sable&mer.png">
+    </section>
 
 </body>
 </html>
