commit -m "ajouter les modifications"
commit -m "ajouter les modifications"

--- a/CV.html
+++ b/CV.html
@@ -11,16 +11,14 @@
 <body>
     <H1>Alicia Poza</H1>
     <img src="Images/pingu.png" alt="avatar">
-    <section>
-        <p>
+    <br>
+        <p class="date">
             20.04.1992
         </p>
-        </section>
-        <section>
-        <p>
+        <p class="ville">
             Bessan
         </p>
-        </section>
+    <br>
     <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/283975559&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 <br>
     <h2>Experiences & compétences</h2>
